--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,23 +6,40 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.sg2022_we_got_the_moves"
-        minSdk 21
+        applicationId 'com.sg2022.we_got_the_moves'
+        minSdk 28
         targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+    }
+
+    sourceSets {
+        androidTest.assets.srcDirs +=
+                files("$projectDir/schemas".toString())
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable true
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            debuggable true
         }
     }
 
-    buildFeatures{
+    buildFeatures {
         dataBinding = true
         viewBinding = true
     }
@@ -31,7 +48,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    namespace 'com.example.sg2022_we_got_the_moves'
+    namespace 'com.sg2022.we_got_the_moves'
+    ndkVersion '21.4.7075529'
+    buildToolsVersion '33.0.0'
 }
 
 dependencies {
@@ -43,16 +62,24 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'org.javatuples:javatuples:1.2'
+    implementation 'androidx.annotation:annotation:1.5.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // Android Room for SQL database purposes
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
+    androidTestImplementation "androidx.room:room-testing:2.4.3"
 
     // MediaPipe solution-core is the foundation of any MediaPipe Solutions.
-    implementation 'com.google.mediapipe:solution-core:latest.release'
+    implementation 'com.google.mediapipe:solution-core:0.8.11-alpha-1'
     // Optional: MediaPipe Face Detection Solution.
-    implementation 'com.google.mediapipe:facedetection:latest.release'
+    implementation 'com.google.mediapipe:facedetection:0.8.11-alpha-1'
     // Optional: MediaPipe Face Mesh Solution.
-    implementation 'com.google.mediapipe:facemesh:latest.release'
+    implementation 'com.google.mediapipe:facemesh:0.8.11-alpha-1'
     // Optional: MediaPipe Hands Solution.
-    implementation 'com.google.mediapipe:hands:latest.release'
+    implementation 'com.google.mediapipe:hands:0.8.11-alpha-1'
 }
