--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
     annotationProcessor "androidx.room:room-compiler:2.4.3"
     androidTestImplementation "androidx.room:room-testing:2.4.3"
+
+    //import for Charts for Statistics
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
