--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
+    // CameraX core library
+    def camerax_version = "1.0.0-beta10"
+    implementation "androidx.camera:camera-core:$camerax_version"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+
     // Android Room + RxJava for SQL database purposes
     implementation "androidx.room:room-runtime:2.4.3"
     implementation "androidx.room:room-rxjava3:2.4.3"
