Extension: Statistics: Daily Calories + Training Results + Exercise Prototype, Statistics: ViewPagerAdapter, Support JAVA 11 enabled, Added transparent color, Constraint set PrimaryKey to AutoGen, Moved DataGenerator to utils folder, Added new Queries (DAO), CleanUp + Refactoring issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            //debuggable false
             debuggable true
         }
         debug {
@@ -48,8 +49,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     namespace 'com.sg2022.we_got_the_moves'
     ndkVersion '21.4.7075529'
@@ -62,7 +63,7 @@ dependencies {
     implementation 'com.google.flogger:flogger:0.7.4'
     implementation 'com.google.flogger:flogger-system-backend:0.7.4'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-    implementation 'com.google.guava:guava:27.0.1-android'
+    implementation 'com.google.guava:guava:31.1-jre'
 
     def protobufVersion = '3.11.4'
     //noinspection GradleDependency
@@ -79,8 +80,8 @@ dependencies {
     implementation 'org.javatuples:javatuples:1.2'
     implementation 'androidx.annotation:annotation:1.5.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // CameraX core library
     implementation "androidx.camera:camera-core:1.2.0"
@@ -104,4 +105,6 @@ dependencies {
 
     //Youtube Player
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
+
+
 }
