--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
-
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
@@ -21,6 +21,7 @@ android {
             }
         }
     }
+
 
     sourceSets {
         androidTest.assets.srcDirs +=
@@ -34,13 +35,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            //debuggable false
-            debuggable true
+            debuggable false
+            multiDexEnabled true
         }
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             debuggable true
+            multiDexEnabled true
         }
     }
 
@@ -53,9 +55,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
     namespace 'com.sg2022.we_got_the_moves'
     ndkVersion '21.4.7075529'
     buildToolsVersion '33.0.0'
+    dependenciesInfo {
+        includeInApk true
+        includeInBundle true
+    }
 }
 
 dependencies {
@@ -70,7 +77,7 @@ dependencies {
     //noinspection GradleDependency
     implementation "com.google.protobuf:protobuf-java:$protobufVersion"
 
-    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
@@ -89,7 +96,7 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.2.1"
     implementation "androidx.camera:camera-lifecycle:1.2.1"
 
-    // Android Room + RxJava for database purposes
+    // Android Room + RxJava
     implementation "androidx.room:room-runtime:2.5.0"
     implementation "androidx.room:room-rxjava3:2.5.0"
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
@@ -97,13 +104,25 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.5.0"
     androidTestImplementation "androidx.room:room-testing:2.5.0"
 
-    //Glide lib for image purposes
+    //Images
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
-    //import for Charts for statistics
+    //Charts
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     //Youtube Player
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
+
+    //Video Recording
+    implementation 'com.github.HBiSoft:HBRecorder:2.0.5'
+
+    //Video Playback
+    implementation 'com.github.kishansinghpanwar:AutoPlayer:v1.0.0'
+    def exoplayerVersion = '2.9.6'
+    implementation 'com.google.android.exoplayer:exoplayer-core:exoplayerVersion'
+    implementation 'com.google.android.exoplayer:exoplayer:exoplayerVersion'
+
+    //IO
+    implementation 'commons-io:commons-io:2.11.0'
 }
