--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,6 @@ dependencies {
     implementation 'com.google.flogger:flogger-system-backend:0.7.4'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'com.google.guava:guava:31.1-jre'
-
     def protobufVersion = '3.11.4'
     //noinspection GradleDependency
     implementation "com.google.protobuf:protobuf-java:$protobufVersion"
@@ -84,9 +83,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
+    implementation 'androidx.annotation:annotation:1.5.0'
+
+    //Support
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.javatuples:javatuples:1.2'
-    implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'commons-io:commons-io:2.11.0'
+
+    //Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -95,6 +99,9 @@ dependencies {
     implementation "androidx.camera:camera-core:1.2.1"
     implementation "androidx.camera:camera-camera2:1.2.1"
     implementation "androidx.camera:camera-lifecycle:1.2.1"
+    implementation "androidx.camera:camera-video:1.2.1"
+    implementation "androidx.camera:camera-view:1.2.1"
+    implementation "androidx.camera:camera-extensions:1.2.1"
 
     // Android Room + RxJava
     implementation "androidx.room:room-runtime:2.5.0"
@@ -116,13 +123,13 @@ dependencies {
 
     //Video Recording
     implementation 'com.github.HBiSoft:HBRecorder:2.0.5'
+    implementation 'cn.ezandroid:EZFilter:2.0.9'
+    implementation 'cn.ezandroid:EZPermission:1.1.2'
+
 
     //Video Playback
-    implementation 'com.github.kishansinghpanwar:AutoPlayer:v1.0.0'
     def exoplayerVersion = '2.9.6'
     implementation 'com.google.android.exoplayer:exoplayer-core:exoplayerVersion'
     implementation 'com.google.android.exoplayer:exoplayer:exoplayerVersion'
-
-    //IO
-    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'com.github.kishansinghpanwar:AutoPlayer:v1.0.0'
 }
