--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,16 @@
         android:theme="@style/Theme.SG2022WeGotTheMoves"
         tools:targetApi="33">
         <activity
+            android:name=".ui.training.tabs.playback.PlaybackActivity"
+            android:screenOrientation="portrait"
+            android:requestLegacyExternalStorage="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,8 +50,8 @@
         <activity
             android:name=".ui.training.MediaPipeActivity"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             tools:ignore="LockedOrientationActivity">
             <meta-data
                 android:name="android.app.lib_name"
